@@ -1,3 +1,8 @@
+2010-06-22  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/TestFormattingBugs.cs: Moved test
+	  suite to different namespace.
+
 2010-06-21  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor.Tests/VirtualSpacesTests.cs: Added test for
